remove unnecessary codes

--- a/templates/message/message_room.html
+++ b/templates/message/message_room.html
@@ -26,9 +26,7 @@
         $(function () {
             //notifyMe();
             init('{{ user.id }}');
-            //init("1111");
-
-            $(function() { $('#chatview').fadeIn(); });
+            $('#chatview').fadeIn();
         });
     </script>
 {% endblock %}
