fix bug & IE compatibility issue on product_detail page

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -70,7 +70,7 @@
 
             $('.ask-seller').on('click', function() {
                 startMessage('{{ user.id }}',
-                        '{{ product.seller.id }}', '{{ product.seller.user.get_short_name }}', '{{ product.seller.user.get_avatar }}');
+                        '{{ product.seller.user.id }}', '{{ product.seller.user.get_short_name }}', '{{ product.seller.user.get_avatar }}');
             });
         });
 
