--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
             <img class="fa-angle-left" style="display:none;" src="{% static 'img/arrow-left.png' %}">
             <img class="fa-angle-right" src="{% static 'img/arrow-right.png' %}">
             <div class="survey-title">
-                <span id="italic">SNS </span>를 찾아보세요!{{ test }}
+                <span id="italic">SNS </span>를 찾아보세요!
                 <div class="survey-subtitle sub-title-step1">
                     01 테마를 선택해 주세요.
                 </div>
