fix font bug on old browsers

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,8 @@
     <style>
         @font-face {
             font-family: NotoSans;
-            src: url('{% static 'fonts/NotoSans-Regular.eot' %}');
-            src: local(※), url('{% static 'fonts/NotoSans-Regular.eot' %}') format(‘woff’);
-        }
-
+            src:url('{% static 'fonts/NotoSans-Regular.eot' %}');
+            src:local(※),url('{% static 'fonts/NotoSans-Regular.eot' %}') format('woff'); }
         body {
             font-family: 'NotoSans', sans-serif;
             font-weight: 300;
