--- a/templates/account/dashboard_base.html
+++ b/templates/account/dashboard_base.html
@@ -5,14 +5,12 @@
 {% block css %}
     <link rel="stylesheet" href="{% static 'css/dashboard.css' %}">
     <link rel="stylesheet" href="{% static 'css/dashboard_sidebar.css' %}">
-    {% block dashboard_css %}
-    {% endblock %}
+    {% block dashboard_css %}{% endblock %}
 {% endblock %}
 
 {% block js %}
     <script type="text/javascript" src="{% static 'js/dashboard.js' %}"></script>
-    {% block dashboard_js %}
-    {% endblock %}
+    {% block dashboard_js %}{% endblock %}
 {% endblock %}
 
 {% block content %}
@@ -32,7 +30,6 @@
 
         {% include  'account/dashboard_sidebar.html' %}
 
-        {% block dashboard_content %}
-        {% endblock %}
+        {% block dashboard_content %}{% endblock %}
     </div>
 {% endblock %}
