--- a/static/css/message.css
+++ b/static/css/message.css
@@ -1,3 +1,26 @@
+.channel-list-options {
+    margin-top: 25px;
+    margin-left: 25px;
+}
+.channel-list-options ul li {
+    display: inline-block;
+    font-size: 12px;
+    color: rgba(0, 0, 0, .6);
+    font-weight: 600;
+    text-align: center;
+    cursor: pointer;
+    margin-right: 30px;
+}
+.channel-list-options ul li:first-child {
+    margin-left: 10px;
+}
+.channel-list-options ul li:last-child {
+    margin-right: 0;
+}
+.channel-list-options .active {
+    color: #648efc;
+}
+
 table.channels {
 	margin-top: 15px;
     border: 2px solid #DADADA;
