add some links missed out from header

--- a/templates/seller/order_manage.html
+++ b/templates/seller/order_manage.html
@@ -60,9 +60,9 @@
                                     <td>{{ order.product.id }}</td>
                                     <td>{{ order.product }}</td>
                                     <td>{{ order.customer.get_short_name }}</td>
-                                    <td></td>
+                                    <td>{# order.created #}</td>
                                     <td>{{ order.status_in_korean }}</td>
-                                    <td></td>
+                                    <td>{#  #}</td>
                                     <td></td>
                                 </tr>
                             {% endfor %}
