--- a/templates/header.html
+++ b/templates/header.html
@@ -52,8 +52,8 @@
             </div>
             <div class="header-menu">판매<span><i class="fa fa-caret-down" aria-hidden="true"></i></span></div>
             <div class="header-sub-menu seller">
-                <a>- 상품관리</a>
-                <a>- 주문 / 판매 관리</a>
+                <a href="{% url 'product_manage' %}">- 상품관리</a>
+                <a href="{% url 'product_order_manage' %}">- 주문 / 판매 관리</a>
                 <a>- 정산 / 수익 관리</a>
             </div>
             <a href="{% url 'change_info' %}">계정설정</a>
