fix bugs in messaging

--- a/templates/message/message_room.html
+++ b/templates/message/message_room.html
@@ -13,8 +13,7 @@
         </div>
         <div id="message-pannel">
             <div id="chatview">
-                <div id="chat-messages">
-                </div>
+                <div id="chat-messages"></div>
             </div>
             <div id="sendmessage">
                 <label class="chat-input-file" for="chat_file_input">
