--- a/templates/seller/product_manage.html
+++ b/templates/seller/product_manage.html
@@ -29,8 +29,8 @@
                 프리미엄 신청
             </div>
         </div>
-        <div class="dashboard-nav advertise">
-        </div>
+{#        <div class="dashboard-nav advertise">#}
+{#        </div>#}
         <div class="dashboard-product-manage">
             {% for item in product_list %}
                 <div class="product-item">
