--- a/templates/header.html
+++ b/templates/header.html
@@ -6,14 +6,6 @@
                 <img src="{% static 'img/logo.png' %}">
             </a>
         </div>
-        {#        <div id="gnb">#}
-        {#            <nav role="navigation" itemscope itemtype="">#}
-        {#                <form>#}
-        {#                    <input type="text" name="search" value="" id="gnb-search" placeholder="무엇을 찾고 계시나요?">#}
-        {#                    <img class="fa-search" src="{% static 'img/search.png' %}">#}
-        {#                </form>#}
-        {#            </nav>#}
-        {#        </div>#}
         <div id="header_tnb">
             {% if user.is_authenticated %}
                 <a id="point" href="{% url 'point_history' %}">
@@ -23,19 +15,15 @@
                     MESSAGE <span class="unread-message-counter"></span>
                     <i class="fa fa-circle" aria-hidden="true"></i>
                 </a>
-                <a id="doing" href="#">
-                    DOING
-                    <i class="fa fa-circle" aria-hidden="true"></i>
-                </a>
                 <a id="header-profile" href="#">
                     <img class="profile-image" src="{{ user.get_avatar }}">
                 </a>
             {% else %}
                 <a id="signup" href="{% url 'account_signup' %}">
-                    JOIN
+                    회원가입
                 </a>
                 <a id="login" href="{% url 'account_login' %}">
-                    LOGIN
+                    로그인
                 </a>
             {% endif %}
         </div>
