--- a/templates/account/dashboard_base.html
+++ b/templates/account/dashboard_base.html
@@ -17,7 +17,7 @@
     <div class="dashboard_container">
         <div class="dashboard-header">
             <div class="dashboard-title">
-                <a href="{% url 'dashboard' %}">포스팅 게시</a>
+                <a href="{% url 'dashboard' %}">마이페이지</a>
             </div>
             <div class="dashboard-sub">
                 <ul>
