--- a/templates/account/dashboard_purchase.html
+++ b/templates/account/dashboard_purchase.html
@@ -91,7 +91,7 @@ csrfmiddlewaretoken : "{{ csrf_token }}"
                                     } else {
                                         var msg = '결제에 실패하였습니다.';
                                         msg += '에러내용 : ' + rsp.error_msg;
-                                        console.log(msg);
+                                        alert(msg);
                                         location.reload();
                                     }
                                 });
