order manager profit manage

--- a/templates/account/dashboard_sidebar.html
+++ b/templates/account/dashboard_sidebar.html
@@ -50,7 +50,7 @@
                 <li><a href="{% url 'product_upload' %}">- 상품등록</a></li>
                 <li><a href="{% url 'product_manage' %}">- 상품관리</a></li>
                 <li><a href="{% url 'product_order_manage' %}">- 주문 / 판매관리</a></li>
-                <li><a href="#">- 정산 / 수익관리</a></li>
+                <li><a href="{% url 'product_profit_manage' %}">- 정산 / 수익관리</a></li>
             </ul>
         </div>
     </div>
