--- a/templates/header.html
+++ b/templates/header.html
@@ -42,7 +42,7 @@
             <div class="header-sub-menu seller">
                 <a href="{% url 'product_manage' %}">- 상품관리</a>
                 <a href="{% url 'product_order_manage' %}">- 주문 / 판매 관리</a>
-                <a>- 정산 / 수익 관리</a>
+                <a href="{% url 'product_profit_manage' %}">- 정산 / 수익 관리</a>
             </div>
             <a href="{% url 'change_info' %}">계정설정</a>
             <a href="{% url 'account_logout' %}">로그아웃</a>
