--- a/static/css/dashboard/seller/profit.css
+++ b/static/css/dashboard/seller/profit.css
@@ -35,10 +35,116 @@
     height: 100px;
     background: #DADADA;
     border-radius: 50%;
-    margin-left: 13px;
+    margin-top: 40px;
 }
 
 .dashboard-info-profit .dashboard-info-summary img {
     height: 50px;
     margin-top: 23px;
 }
+
+.dashboard-info-summary-title {
+    position: absolute;
+}
+
+.dashboard-info-summary-title .meta {
+    font-size: 10px;
+    color: #777777;
+    margin-top: 3px;
+}
+
+.money {
+    font-size: 22px;
+    margin-top: 10px;
+    font-weight: bold;
+    letter-spacing: -.03em;
+}
+
+.money .unit {
+    font-size: 12px;
+    margin-left: 2px;
+}
+
+.profit-info {
+    border: 2px solid #DADADA;
+    border-top: none;
+    width: 561px;
+    height: 150px;
+    text-align: center;
+    position: relative;
+}
+
+.profit-info .profit-info-left {
+    width: 311px;
+    float: left;
+    padding: 10px 30px 10px 60px;
+}
+
+.profit-info .profit-info-right {
+    float: left;
+    width: 160px;
+}
+
+.profit-info .profit-info-right button {
+    background: #648efc;
+    color: white;
+    padding: 10px 35px 10px 35px;
+    font-weight: 500;
+    margin-top: 55px;
+    font-size: 12px;
+}
+
+.profit-info .profit-info-left label {
+    font-size: 16px;
+    font-weight: bold;
+    color: #648efc;
+    text-align: left;
+    margin-right: 5px;
+    position: absolute;
+}
+
+.profit-info .profit-info-left label[for='account_name'] {
+    left: 40px;
+    top: 20px;
+}
+
+.profit-info .profit-info-left label[for='bank'] {
+    left: 40px;
+    top: 50px;
+}
+
+.profit-info .profit-info-left label[for='account_number'] {
+    left: 40px;
+    top: 80px;
+}
+
+.profit-info .meta {
+    font-size: 10px;
+    color: #777;
+    font-weight: 500;
+    margin-top: 5px;
+    position: relative;
+}
+
+.profit-info .account-info input {
+    border-bottom: solid 1px #DADADA;
+    padding: 5px;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    font-size: 12px;
+    width: 200px;
+}
+
+.profit-info .account-info select {
+    position: absolute;
+    left: 108px;
+    top: 50px;
+}
+
+.profit-info .account-info input[name='account_number'] {
+    margin-top: 20px;
+}
+
+/*.profit-info .account-info p {
+    margin-top: 10px;
+}*/
