--- a/templates/seller/profit_manage.html
+++ b/templates/seller/profit_manage.html
@@ -31,17 +31,29 @@
             <div class="dashboard-info-summary info-order-wish">
                 <div class="dashboard-info-summary-title">
                     출금가능
+                    <div class="meta">
+                        완료 건의 판매금액
+                    </div>
                 </div>
-                <div class="dashboard-info-summary-count">
+                <div class="dashboard-info-summary-count" style="background: #648efc;">
                     <img src="{% static 'img/influe_01.png' %}">
+                </div>
+                <div class="money" style="color: #648efc;">
+                    {{ possible_profit }}<span class="unit">원</span>
                 </div>
             </div>
             <div class="dashboard-info-summary info-order-cart">
                 <div class="dashboard-info-summary-title">
                     예상수익금
+                    <div class="meta">
+                        미완료 건의 판매금액
+                    </div>
                 </div>
-                <div class="dashboard-info-summary-count">
+                <div class="dashboard-info-summary-count" style="background: #b1c6fc;">
                     <img src="{% static 'img/influe_02.png' %}">
+                </div>
+                <div class="money" style="color: #b1c6fc;">
+                    {{ expected_profit }}<span class="unit">원</span>
                 </div>
             </div>
             <div class="dashboard-info-summary info-order-process">
@@ -51,16 +63,43 @@
                 <div class="dashboard-info-summary-count">
                     <img src="{% static 'img/influe_03.png' %}">
                 </div>
+                <div class="money" style="color: #777;">
+                    0<span class="unit">원</span>
+                </div>
             </div>
             <div class="dashboard-info-summary info-order-process">
                 <div class="dashboard-info-summary-title">
                     잔고전환
+                    <div class="meta">
+                        예치금으로 전환한 수익금
+                    </div>
                 </div>
-                <div class="dashboard-info-summary-count">
+                <div class="dashboard-info-summary-count" style="background: #648efc;">
                     <img src="{% static 'img/influe_04.png' %}">
+                </div>
+                <div class="money" style="color: #648efc;">
+                    0<span class="unit">원</span>
                 </div>
             </div>
         </div>
+        <form method="POST">{% csrf_token %}
+        <div class="profit-info">
+            <div class="profit-info-left">
+                <div class="account-info">
+                        {% for form in forms %}
+                            <label for="{{form.name}}">{{ form.label }}</label>
+                            {{ form }}
+                        {% endfor %}
+                </div>
+                <div class="meta">
+                    출금 신청일로부터 영업일 기준 3일안에 입금해드립니다.
+                </div>
+            </div>
+            <div class="profit-info-right">
+                <button type="submit">출금하기</button>
+            </div>
+        </div>
+        </form>
 
     </div>
 {% endblock %}
