--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/header.css' %}">
+    <link rel="stylesheet" href="{% static 'css/contact.css' %}">
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
     <link rel="stylesheet" href="{% static 'font-awesome-4.6.3/css/font-awesome.min.css' %}">
     <style>
@@ -31,14 +32,27 @@
     {% include 'header.html' %}
 
     {% block jumbotron %}{% endblock %}
+    <div style="margin-bottom: 120px;">
     {% block content %}{% endblock %}
+    </div>
+    <div class="contact">
+        <div class="contact-button">
+            고객센터
+        </div>
+        <div class="contact-drop-down" style="display:none;">
+            <a href="{% url 'contact' %}">1:1 문의</a>
+            <a href="{% url 'dashboard' %}">신고하기</a>
+        </div>
+    </div>
 
     {% include 'footer.html' %}
 
     <script type="text/javascript" src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
     <script type="text/javascript" src='{% static "js/django.csrf.js" %}'></script>
     <script type="text/javascript" src="{% static 'js/header.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery-scrolltofixed-min.js' %}"></script>
     {% if user.is_authenticated %}
+        <script type="text/javascript" src="{% static 'js/contact.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/SendBird.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/message-common.js' %}"></script>
         <script type="text/javascript">
